# cookiecutter-pyproject

./: .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: test.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_integration.sh  test_project_generation.py
{{cookiecutter.project_name}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile-dev  LICENSE  Makefile  README.md  ci.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.flake8.txt  requirements.txt  requirevents.dev.txt  setup.cfg
{{cookiecutter.project_name}}/.devcontainer/: Dockerfile.workspace  README.md  devcontainer.json  docker-compose.devcontainer.yml  docker-compose.personal.yml.example  launch.json
{{cookiecutter.project_name}}/.devcontainer/scripts/: host-initialize.sh  post-create.sh  post-start.sh
{{cookiecutter.project_name}}/.github/workflows/: workflow-ci.yml  workflow-docker.yml  workflow-package.yml
{{cookiecutter.project_name}}/addons/: ci.django.sh
{{cookiecutter.project_name}}/docs/: conf.py
{{cookiecutter.project_name}}/docs/_templates/: moreinfo.html
{{cookiecutter.project_name}}/tests/: test_foo.py
{{cookiecutter.project_name}}/tests/bank/: conftest.py  test_account.py  test_storage.py  test_transaction.py
{{cookiecutter.project_name}}/tests/test_example/: test_some_function.py
{{cookiecutter.project_name}}/{{cookiecutter.module_name}}/bank/: storage.py
