[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "cookiecutter-pyproject"
description = "Project for scaffolding a `python` package or project structure."
version = "1.0.0"
readme = "README.md"
authors = [
  { name = "yakimka", email = "ss.yakim@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.10,<4.0.0"
dependencies = [
  "cookiecutter~=2.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.3.3"
tomlkit = "^0.13.2"
binaryornot = "^0.4.4"
pytest-cookies = "^0.7.0"

[tool.pytest.ini_options]
# Directories that are not visited by pytest collector:
norecursedirs = [
  "{{cookiecutter.project_name}}",
  "hooks",
  ".git",
  "__pycache__",
]

# Strict `@xfail` by default:
xfail_strict = true

# Extra options:
addopts = [
  "--strict-markers",
  "--strict-config",
  "--tb=short",
  "--doctest-modules",
]
