[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel>=0.37.1"]

[project]
name = "cookiecutter-pyproject"
description = "Project for scaffolding a `python` package or project structure."
version = "1.0.0"
readme = "README.md"
authors = [
  { name = "yakimka", email = "ss.yakim@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.10,<4.0.0"

dependencies = [
  "cookiecutter~=2.6",
]
[dependency-groups]
dev = [
  "flake8>=7.0.0,<8.0.0",
  "pytest>=9.0.1,<9.1.0",
  "tomlkit>=0.13.2,<1.0.0",
  "binaryornot>=0.4.4,<1.0.0",
  "pytest-cookies>=0.7.0,<1.0.0",
]

[tool.setuptools]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
platforms = ["Linux"]
include-package-data = true
zip-safe = true  # This just means it's safe to zip up the bdist

# Non-code data that should be included in the package source code
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html
[tool.setuptools.package-data]
acme = ["*.xml"]

# Python modules and packages that are included in the
# distribution package (and therefore become importable)
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "examples"]

[tool.pytest.ini_options]
# Directories that are not visited by pytest collector:
norecursedirs = [
  "{{cookiecutter.project_name}}",
  "hooks",
  ".git",
  "__pycache__",
]

# Strict `@xfail` by default:
xfail_strict = true

# Extra options:
addopts = [
  "--strict-markers",
  "--strict-config",
  "--tb=short",
  "--doctest-modules",
]
