[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "cookiecutter.project_name"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
authors = [
  { name = "{{ cookiecutter.organization }}" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: PyPy"
]

[project.urls]
repository = "https://github.com/{{cookiecutter.organization}}/{{cookiecutter.project_name}}"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.1.1"
pytest-deadfixtures = "^2.2.1"
pytest-randomly = "^3.16"

[tool.poetry]
requires-poetry = ">=2.0.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8.0"

[tool.isort]
# isort configuration:
# https://github.com/timothycrosley/isort/wiki/isort-Settings
profile = "black"
include_trailing_comma = true
use_parentheses = true
# See https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
line_length = "{{ cookiecutter.max_line_length }}"

[tool.black]
line-length = "{{ cookiecutter.max_line_length }}"

[tool.pytest.ini_options]
pythonpath = "."
# Directories that are not visited by pytest collector:
norecursedirs = [
  "*.egg",
  ".eggs",
  "dist",
  "build",
  "docs",
  ".tox",
  ".git",
  "__pycache__",
  ".cache",
  ".venv",
  "venv",
  ".pre-commit",
]

# Strict `@xfail` by default:
xfail_strict = true

# pytest-asyncio
asyncio_mode = "auto"

# Extra options:
addopts = [
  # don't add --cov because it breaks pycharm debugger
  #   just add it manaually when needed to cmd args
  "--import-mode=importlib",
  "--strict-markers",
  "--strict-config",
  "--tb=short",
  "--cov-report=term-missing",
#  "--cov-fail-under=100",
  "-vv",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise AssertionError",
  "raise NotImplementedError",
  "pass",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.mypy]
files = ["."]
exclude = ["tests/"]
##{% if cookiecutter.pydantic_support.startswith("y") %}
plugins = ["pydantic.mypy"]
##{% endif %}
# mypy configurations: https://mypy.readthedocs.io/en/latest/config_file.html
allow_redefinition = false
check_untyped_defs = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_calls = '{% if cookiecutter.force_typing.startswith("y") %}true{% else %}false{% endif %}'
disallow_untyped_decorators = '{% if cookiecutter.force_typing.startswith("y") %}true{% else %}false{% endif %}'
disallow_untyped_defs = '{% if cookiecutter.force_typing.startswith("y") %}true{% else %}false{% endif %}'
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = false
